<resources>
    <string name="app_name">Homework8</string>
    <string name="first_name">имя</string>
    <string name="last_name">фамилия</string>
    <string name="age">возраст</string>
    <string name="edit">редактирование</string>
    <string name="view">просмотр</string>
    <string name="edit_foto">выбор фото</string>
    <string name="item_about">о программе</string>
    <string name="about_program">домашняя работа, лекция 8</string>
    <string name="delete_foto">удалить фото</string>
    <string name="list_students">Список студентов</string>
    <string name="about_btn">О программе</string>
</resources>
